--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header
-  <h1> vai sair uma imagem aqui</h1>
+    hidden> vai sair uma imagem aqui</h1>
 <ul> loja de roupas e produtos</ul>
      <li> sobre a loja</li>
      <li> cardapio para a loja  </li>
@@ -16,4 +16,9 @@
 </header>  
 </body>
 <html>
-    <SEction>
+    <SEction> X-UA-Compatible
+    </SEction class sobre a loja de roupas
+    ,SEction class produtos
+    class os produtos sao de muita qualidade
+    SEction para varios tipos de clientes
+    
