--- a/index.html
+++ b/index.html
@@ -2,23 +2,22 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="styles.css">
+    <title>Biblioteca Start</title>
 </head>
 <body>
-    <header
-    hidden> vai sair uma imagem aqui</h1>
-<ul> loja de roupas e produtos</ul>
-     <li> sobre a loja</li>
-     <li> cardapio para a loja  </li>
-     <li> galera de foto</li>
-</header>  
-</body>
-<html>
-    <SEction> X-UA-Compatible
-    </SEction class sobre a loja de roupas
-    ,SEction class produtos
-    class os produtos sao de muita qualidade
-    SEction para varios tipos de clientes
+    <header class="cabecalho">
+        <div class="container">
+    <img class="container_imagem"   src="Logo.svg" alt="logo da biblioteca Start">
+    <h1 class="container_titulo">
+        Biblioteca <b class=" container_titulo--negrito"> Start</b>
+    </h1>
+    <p class="container_frase">
+        "Aqui,as atitudes das pessoas sâo muuito importantes para a vida."
+    </p>
+</div>
+</header>
     
+</body>
+</html>
